--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v18.0" nonce="H5DrSZIL"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
